// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/CriteresAction Exemple 1 1`] = `
Array [
  <li
    className=" fr-mt-2w fr-mb-1w"
  >
    Être une collectivité engagée dans une politique
     
    Économie Circulaire
     et le prouver (via les documents preuves ou un texte justificatif)
  </li>,
  <div
    className="critere-action-table fr-my-4"
  >
    <table>
      <thead>
        <tr>
          <th
            className="pl-10"
            colSpan={3}
          >
            Sous-action ou tâche
          </th>
          <th
            className="pr-6"
          >
            Statut ou score requis
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            className="text-center w-[56px]"
          />
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              1.1.1.1
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            <a
              className="hover:underline"
              href="/collectivite/1/action/eci/eci_1.1/?#eci_1.1.1.1"
              target="_blank"
            >
              Identifier un⸱e élu⸱e référent⸱e
            </a>
          </td>
          <td>
            Fait
          </td>
        </tr>
        <tr>
          <td
            className="text-center w-[56px]"
          />
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              1.1.1.3
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            <a
              className="hover:underline"
              href="/collectivite/1/action/eci/eci_1.1/?#eci_1.1.1.3"
              target="_blank"
            >
              Identifier une personne technique
            </a>
          </td>
          <td>
            Programmé ou fait
          </td>
        </tr>
        <tr>
          <td
            className="text-center w-[56px]"
          />
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              1.1.1.3
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            <a
              className="hover:underline"
              href="/collectivite/1/action/eci/eci_1.1/?#eci_1.1.1.3"
              target="_blank"
            >
              Mettre en place une équipe projet
            </a>
          </td>
          <td>
            Programmé ou fait
          </td>
        </tr>
        <tr>
          <td
            className="text-center w-[56px]"
          />
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              1.1.2
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            <a
              className="hover:underline"
              href="/collectivite/1/action/eci/eci_1.1/?#eci_1.1.2"
              target="_blank"
            >
              Engager un diagnostic territorial
            </a>
          </td>
          <td>
            20% fait minimum
          </td>
        </tr>
        <tr>
          <td
            className="text-center w-[56px]"
          />
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              2.1.0
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            <a
              className="hover:underline"
              href="/collectivite/1/action/eci/eci_2.1/?#eci_2.1.0"
              target="_blank"
            >
              Respecter la réglementation PLPDMA
            </a>
          </td>
          <td>
            Programmé ou fait
          </td>
        </tr>
        <tr>
          <td
            className="text-center w-[56px]"
          />
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              2.2.0
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            <a
              className="hover:underline"
              href="/collectivite/1/action/eci/eci_2.2/?#eci_2.2.0"
              target="_blank"
            >
              Respecter la réglementation liée au système de collecte
            </a>
          </td>
          <td>
            Programmé ou fait
          </td>
        </tr>
        <tr>
          <td
            className="text-center w-[56px]"
          />
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              2.3.0
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            <a
              className="hover:underline"
              href="/collectivite/1/action/eci/eci_2.3/?#eci_2.3.0"
              target="_blank"
            >
              Respecter la règlementation concernant la valorisation des déchets (dont organiques)
            </a>
          </td>
          <td>
            Programmé ou fait
          </td>
        </tr>
        <tr>
          <td
            className="text-center w-[56px]"
          />
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              2.4.0
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            <a
              className="hover:underline"
              href="/collectivite/1/action/eci/eci_2.4/?#eci_2.4.0"
              target="_blank"
            >
              Respecter la règlementation sur les impacts environnementaux des émissions polluantes et les nuisances (olfactives, sonores....)
            </a>
          </td>
          <td>
            Programmé ou fait
          </td>
        </tr>
        <tr>
          <td
            className="text-center w-[56px]"
          />
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              3.2.0
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            <a
              className="hover:underline"
              href="/collectivite/1/action/eci/eci_3.2/?#eci_3.2.0"
              target="_blank"
            >
              Mettre en place le Schéma de promotion des achats publics socialement et écologiquement responsables (SPASER)
            </a>
          </td>
          <td>
            Programmé ou fait
          </td>
        </tr>
        <tr>
          <td
            className="text-center w-[56px]"
          />
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              4.1.0
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            <a
              className="hover:underline"
              href="/collectivite/1/action/eci/eci_4.1/?#eci_4.1.0"
              target="_blank"
            >
              Rédiger le rapport annuel SPPGD
            </a>
          </td>
          <td>
            Programmé ou fait
          </td>
        </tr>
        <tr>
          <td
            className="text-center w-[56px]"
          />
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              1.1.1.2
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            <a
              className="hover:underline"
              href="/collectivite/1/action/eci/eci_1.1/?#eci_1.1.1.2"
              target="_blank"
            >
              Avoir engagé la politique Économie Circulaire
            </a>
          </td>
          <td>
            Fait
          </td>
        </tr>
        <tr>
          <td
            className="text-center w-[56px]"
          />
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              2.1.0
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            <a
              className="hover:underline"
              href="/collectivite/1/action/eci/eci_2.1/?#eci_2.1.0"
              target="_blank"
            >
              Respecter la réglementation PLPDMA
            </a>
          </td>
          <td>
            Fait
          </td>
        </tr>
        <tr>
          <td
            className="text-center w-[56px]"
          />
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              2.2.0
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            <a
              className="hover:underline"
              href="/collectivite/1/action/eci/eci_2.2/?#eci_2.2.0"
              target="_blank"
            >
              Respecter la réglementation liée au système de collecte
            </a>
          </td>
          <td>
            Fait
          </td>
        </tr>
        <tr>
          <td
            className="text-center w-[56px]"
          />
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              2.3.0
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            <a
              className="hover:underline"
              href="/collectivite/1/action/eci/eci_2.3/?#eci_2.3.0"
              target="_blank"
            >
              Respecter la règlementation concernant la valorisation des déchets (dont organiques)
            </a>
          </td>
          <td>
            Fait
          </td>
        </tr>
        <tr>
          <td
            className="text-center w-[56px]"
          />
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              2.4.0
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            <a
              className="hover:underline"
              href="/collectivite/1/action/eci/eci_2.4/?#eci_2.4.0"
              target="_blank"
            >
              Respecter la règlementation sur les impacts environnementaux des émissions polluantes et les nuisances (olfactives, sonores....)
            </a>
          </td>
          <td>
            Fait
          </td>
        </tr>
        <tr>
          <td
            className="text-center w-[56px]"
          />
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              3.2.0
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            <a
              className="hover:underline"
              href="/collectivite/1/action/eci/eci_3.2/?#eci_3.2.0"
              target="_blank"
            >
              Mettre en place le Schéma de promotion des achats publics socialement et écologiquement responsables (SPASER)
            </a>
          </td>
          <td>
            Fait
          </td>
        </tr>
        <tr>
          <td
            className="text-center w-[56px]"
          />
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              4.1.0
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            <a
              className="hover:underline"
              href="/collectivite/1/action/eci/eci_4.1/?#eci_4.1.0"
              target="_blank"
            >
              Rédiger le rapport annuel SPPGD
            </a>
          </td>
          <td>
            Fait
          </td>
        </tr>
      </tbody>
    </table>
  </div>,
]
`;

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/CriteresAction Exemple 2 1`] = `
Array [
  <li
    className=" fr-mt-2w fr-mb-1w"
  >
    Être une collectivité engagée dans une politique
     
    Climat Air Énergie
     et le prouver (via les documents preuves ou un texte justificatif)
  </li>,
  <div
    className="critere-action-table fr-my-4"
  >
    <table>
      <thead>
        <tr>
          <th
            className="pl-10"
            colSpan={3}
          >
            Sous-action ou tâche
          </th>
          <th
            className="pr-6"
          >
            Statut ou score requis
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            className="text-center w-[56px]"
          />
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              5.1.1.1.3
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            <a
              className="hover:underline"
              href="/collectivite/1/action/cae/cae_5.1.1/?#cae_5.1.1.1.3"
              target="_blank"
            >
              Identifier un⸱e élu⸱e référent⸱e
            </a>
          </td>
          <td>
            Fait
          </td>
        </tr>
        <tr>
          <td
            className="text-center w-[56px]"
          />
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              5.1.1.1.3
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            <a
              className="hover:underline"
              href="/collectivite/1/action/cae/cae_5.1.1/?#cae_5.1.1.1.3"
              target="_blank"
            >
              Identifier une personne technique
            </a>
          </td>
          <td>
            Programmé ou fait
          </td>
        </tr>
        <tr>
          <td
            className="text-center w-[56px]"
          />
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              5.1.1.3.2
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            <a
              className="hover:underline"
              href="/collectivite/1/action/cae/cae_5.1.1/?#cae_5.1.1.3.2"
              target="_blank"
            >
              Mettre en place une équipe projet
            </a>
          </td>
          <td>
            Programmé ou fait
          </td>
        </tr>
        <tr>
          <td
            className="text-center w-[56px]"
          />
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              1.1.2
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            <a
              className="hover:underline"
              href="/collectivite/1/action/cae/cae_1.1.2/?#cae_1.1.2"
              target="_blank"
            >
              Engager un diagnostic territorial
            </a>
          </td>
          <td>
            20% fait minimum
          </td>
        </tr>
        <tr>
          <td
            className="text-center w-[56px]"
          >
            <i
              className="fr-icon fr-fi-checkbox-circle-fill before:text-[#5FD68C]"
            />
          </td>
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              1.1.1.1.1
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            <a
              className="hover:underline"
              href="/collectivite/1/action/cae/cae_1.1.1/?#cae_1.1.1.1.1"
              target="_blank"
            >
              Avoir formalisé une vision et des engagements dans une décision de politique générale
            </a>
          </td>
          <td>
            Fait
          </td>
        </tr>
      </tbody>
    </table>
  </div>,
]
`;
